views exercise partial solutions

--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>LET IT ROLL!</title>
 </head>
 <body>
 <h1>Guess a number from 1 thru 6.</h1>
