form model binding solutions

--- a/src/main/resources/templates/posts/header.html
+++ b/src/main/resources/templates/posts/header.html
@@ -3,7 +3,7 @@
 
 <head th:fragment="header">
     <meta charset="UTF-8" />
-    <title>Football Facts</title>
+    <title>Title</title>
 </head>
 <body>
 
