issues with entitiyManagerFactory

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials::head('Dice Game')"></head>
+<head th:replace="partials::head('Hello')"></head>
 <body>
 <main role="main" class="container hello">
     <div th:replace="partials::header"></div>
