--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
 
 
 <!--<div th:fragment="head (title)" >-->
@@ -24,8 +23,8 @@
     <ul class="nav">
         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="/hello">Hello</a></li>
-        <li class="nav-item"><a class="nav-link" href="/quotes">Quotes</a></li>
-        <li class="nav-item"><a class="nav-link" href="/quotes/random">Random Quote</a></li>
+        <!--<li class="nav-item"><a class="nav-link" href="/quotes">Quotes</a></li>-->
+        <!--<li class="nav-item"><a class="nav-link" href="/quotes/random">Random Quote</a></li>-->
     </ul>
 </nav>
 
